--- a/puppetboard/Dockerfile
+++ b/puppetboard/Dockerfile
@@ -13,7 +13,7 @@ LABEL maintainer="Puppet Release Team <release@puppet.com>" \
       org.label-schema.vcs-ref="be1312133f78696751e77e6c19314a9617666bfc" \
       org.label-schema.build-date="2018-03-23T17:12:30Z" \
       org.label-schema.schema-version="1.0" \
-      com.puppet.dockerfile="/Dockerfile"
+      org.label-schema.dockerfile="/Dockerfile"
 
 RUN apk add --no-cache --update curl py-pip && \
     rm -rf /var/cache/apk/*
