--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,5 @@
+# based off of the code at
+# https://github.com/appveyor-tests/docker-ce/blob/master/appveyor.yml 
 build: off
 image: Visual Studio 2017
 matrix:
@@ -14,11 +16,18 @@ build_script:
   - ps: |
       # Switch-DockerLinux
       # attempt to start stopped services
-      net stop vmms
-      net start vmms
+      Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Hyper-V -All -Verbose
+      Enable-WindowsOptionalFeature -Online -FeatureName Containers -All -Verbose
+      # bcdedit /set hypervisorlaunchtype Auto
+      timeout 15
+      Restart-Computer -Force -Confirm:$false
+      # Set-VMProcessor -VMName <Enter-VM-Name> -ExposeVirtualizationExtensions $true -Verbose
+
+test_script:
+  - ps: |
+      timeout 120
       docker-switch-linux
       bundle exec rake
-      Start-Sleep -Seconds 20
       docker ps
 
 # sudo: false
